--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,15 @@ steps:
       docker push First-set.azurecr.io/web-game:tag
 
 - script: cat 01_kubernetes_aks/app-deploy.yaml
+- task: Kubernetes@1
+  inputs:
+    connectionType: 'Azure Resource Manager'
+    azureSubscriptionEndpoint: 'Free Trial(02ad5631-aebf-4a13-affe-9d6189acdece)'
+    azureResourceGroup: 'First-set'
+    kubernetesCluster: 'First-AKS'
+    command: 'apply'
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
+    azureSubscriptionEndpointForSecrets: 'Free Trial(02ad5631-aebf-4a13-affe-9d6189acdece)'
+    azureContainerRegistry: 'firstcontainer.azurecr.io'
+    forceUpdate: false
