--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ steps:
 
 - task: AzureCLI@2
   inputs:
-    azureSubscription: 'Towards-AzurePortal'
+    azureSubscription: 'Free Trial'
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
